add test line at bottom of code to test GH push from home computer.

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <li><a href="travel-arrangements.html">Travel Arrangements</a></li>
     <li><a href="pictures,etc.html">Pictures, etc</a></li>
     <li><a href="contact.html">Contact Information</a></li>
+  <p>I hope you consider scheduling your next vacation at Nope Island Resort</p>
     </body>
 </html>
